@@ -2968,7 +2968,8 @@ Shared Key</property>
 	  <child>
 	    <widget class="GtkComboBox" id="eap_peap_version_combo">
 	      <property name="visible">True</property>
-	      <property name="items" translatable="yes">Version 0
+	      <property name="items" translatable="yes">Automatic
+Version 0
 Version 1</property>
 	      <property name="add_tearoffs">False</property>
 	      <property name="focus_on_click">True</property>
