@@ -1,3 +1,9 @@
+2009-02-19  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/eap-method-peap.c
+		- Allow forcing PEAP v0 as well; default to "Automatic" PEAP
+			version (rh #468844)
+
 2009-02-18  Dan Williams  <dcbw@redhat.com>
 
 	Patch by paolo borelli <pborelli@katamail.com>
